📱 Fixed button overlap on smaller screens

--- a/style.css
+++ b/style.css
@@ -40,20 +40,6 @@ h1 {
     gap: 20px;
     margin-top: 2em;
 }
-#rain-overlay {
-    
-  background: repeating-linear-gradient(
-    rgba(255, 255, 255, 0.05) 0px,
-    rgba(255, 255, 255, 0.05) 2px,
-    transparent 2px,
-    transparent 4px
-  );
-  animation: rainfall 0.5s linear infinite;
-}
-@keyframes rainfall {
-  0% { background-position: 0 0; }
-  100% { background-position: -100px 100px; }
-}
 .muffle-btn {
   position: absolute;
   bottom: -50px;
@@ -162,9 +148,10 @@ input[type="range"]:hover{
   margin-top: -1.5rem;
 }
 .tea-button {
-  position: fixed;
-  bottom: 40px;
-  right: 40px;
+  position: flex;
+  margin-top: 1rem;
+  align-items: center;
+  display: inline-flex;
   padding: 1rem 1.5rem;
   font-size: 1.1rem;
   font-family: 'Noto Sans Malayalam', sans-serif;
@@ -196,3 +183,16 @@ input[type="range"]:hover{
     margin-right: 0.4rem;
   }
 }
+.soundtea{
+    
+    background-color: rgba(0,0,0,0.4);
+    border-radius: 16px;
+    padding: 20px;
+    width: 110px;
+    height: 90px;
+    box-shadow: 0 8px 30px rgba(0,0,0,0.4);
+    backdrop-filter: blur(6px);
+    transition: transform 0.3 ease, box shadow 0.2s ease;
+    opacity: 0;
+    transform: translateY(20px);
+    animation: fadeInUp 0.6s forwards;}
